# managing_the_distribution_list

./: LICENSE  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_12_11_2307-8204edaf040a_реализовал_модель_пользователь.py  2023_12_12_2235-07e1e3f48ca1_и_с_чистого_листа_я_все_начну_сначала.py
api_v1/: __init__.py
api_v1/user/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  basemodel.py  db_helper.py  user.py
