[tool.poetry]
name = "managing-the-distribution-list"
version = "0.1.0"
description = ""
authors = ["PeskovDV <dv.peskov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"
alembic = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
